--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,15 @@
     <link rel="icon" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
-    <title>React App</title>
+    <title>Login page</title>
+    <!-- <style>
+      /* #root{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+      } */
+    </style> -->
   </head>
   <body>
     <div id="root"></div>
