--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="#" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Login page</title>
-    <!-- <style>
-      /* #root{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 80vh;
-      } */
-    </style> -->
-  </head>
-  <body>
-    <div id="root"></div>
-
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="#" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<title>Tiac ISO</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous" />
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
